delete task fix and alignments

--- a/public/todo.css
+++ b/public/todo.css
@@ -310,7 +310,6 @@ input[type='checkbox'] {
     margin-right: 40px;
     position: relative;
     top: 15px; 
-    float:right; 
 }
 
 #logo {
